[package]
name = "http-stream-websockify"
version = "0.1.0"
edition = "2021"

[dependencies]
async-tungstenite = { version = "*", features = ["tokio-runtime"] }
base64 = "0.22.1"
bytes = "1.9.0"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
futures = "0.3.31"